cluster/default/invidious/invidious-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  namespace: default
  annotations:
    hajimari.io/appName: "invidious"
    hajimari.io/enable: "true"
    hajimari.io/icon: "television-play"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "iv.microserver.space"
  rules:
    - host: "iv.microserver.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invidious-invidious
                port:
                  number: 3000
